Add 'vendor' folder for scripts. Add README.md

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -32,10 +32,21 @@ select {
 	margin: 15px 0;
 }
 
+.favorite {
+	border: 1px solid #b1b1b1;
+	color: #B1B1B1;
+	padding: 2px 6px;
+	position: absolute;
+	right: -1px;
+	top: -1px;
+}
+
 .prediction {
-	border: 1px solid lightgray;
+	border: 1px solid #B1B1B1;
+	cursor: pointer;
 	text-align: center;
 	padding: 5px 10px;
+	position: relative;
 	margin: 15px 0;
 }
 
